fixed font issues and list wrap alignement in lists

--- a/obsidian.css
+++ b/obsidian.css
@@ -46,7 +46,6 @@
 
 .theme-dark
 {
-    --font-monospace: 'Hack Nerd Font', 'Source Code Pro', monospace;
     --background-primary:         var(--dark0);
     --background-primary-alt:     var(--dark0);
     --background-secondary:       var(--dark0-hard);
@@ -106,6 +105,25 @@
     --text-selection:             rgba(189, 174, 147, 0.5); /* light3 */
     --text-tag:                   var(--neutral-aqua);
     --task-checkbox:              var(--light4);
+}
+
+:root {
+  --default-font: -apple-system, BlinkMacSystemFont, Segoe UI,
+    Helvetica, Arial, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji;
+
+  --editor-font: 'Hack Nerd Font', 'Source Code Pro',
+    ui-monospace, SFMono-Regular, SF Mono, Menlo,
+    Consolas, Liberation Mono, monospace;
+}
+
+.markdown-source-view {
+  font-family: var(--editor-font);
+  font-size: 0.9em;
+}
+
+.markdown-preview-view {
+  font-family: var(--default-font);
 }
 
 .theme-dark code[class*="language-"],
@@ -269,14 +287,6 @@ thead
 .HyperMD-list-line
 {
     padding-top: 0 !important;
-}
-
-.CodeMirror-code,
-.CodeMirror-linenumber,
-.cm-formatting
-{
-    font-family: var(--font-monospace) !important;
-    font-size: 0.9em;
 }
 
 .markdown-preview-section pre code,
